<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/fab_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="casual"
            android:text="Select An Activity"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textSize="24sp"
            android:textStyle="bold" />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="@dimen/view_hight"
            android:layout_marginBottom="@dimen/fab_margin"
            android:background="@color/gray_btn_bg_color" />

        <Button
            android:id="@+id/fertilizer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fertilizer_application" />

        <Button
            android:id="@+id/spraying"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/chemical_application_spraying" />

        <Button
            android:id="@+id/planting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/planting" />

        <Button
            android:id="@+id/pest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pest_identification" />

        <Button
            android:id="@+id/others"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/others" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>